--- a/src/index.html
+++ b/src/index.html
@@ -1,15 +1,31 @@
 <!doctype html>
 <html lang="en">
-<head>
-  <meta charset="utf-8">
-  <title>Void</title>
-  <base href="/">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-</head>
-<body>
-  <app-root></app-root>
-</body>
+
+  <head>
+    <meta charset="utf-8">
+    <title>Void</title>
+    <base href="/">
+    <meta name="viewport"
+          content="width=device-width, initial-scale=1">
+    <link rel="icon"
+          href="/favicon.ico"
+          sizes="48x48">
+    <link rel="icon"
+          href="/favicon.svg"
+          sizes="any"
+          type="image/svg+xml">
+    <link rel="apple-touch-icon"
+          href="/icons/apple-touch-icon.png" />
+    <link rel="manifest"
+          href="/manifest.json" />
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap"
+          rel="stylesheet">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+          rel="stylesheet">
+  </head>
+
+  <body>
+    <app-root></app-root>
+  </body>
+
 </html>
